third_party/move/move-compiler-v2/tests/checking/typing/implicit_deref_borrow_field_from_non_struct.exp

Diagnostics:
error: struct incompatible with integer
  ┌─ tests/checking/typing/implicit_deref_borrow_field_from_non_struct.move:6:9
  │
6 │         0.f;
  │         ^

error: struct incompatible with integer
  ┌─ tests/checking/typing/implicit_deref_borrow_field_from_non_struct.move:7:9
  │
7 │         0.g;
  │         ^

error: expected a struct with field `value` but found `u64`
  ┌─ tests/checking/typing/implicit_deref_borrow_field_from_non_struct.move:8:9
  │
8 │         u.value;
  │         ^

error: expected a struct with field `value` but found `bool`
  ┌─ tests/checking/typing/implicit_deref_borrow_field_from_non_struct.move:9:9
  │
9 │         cond.value;
  │         ^^^^

error: expected a struct with field `R` but found `address`
   ┌─ tests/checking/typing/implicit_deref_borrow_field_from_non_struct.move:10:9
   │
10 │         addr.R;
   │         ^^^^

error: expected a struct with field `f` but found `address`
   ┌─ tests/checking/typing/implicit_deref_borrow_field_from_non_struct.move:11:9
   │
11 │         addr.f;
   │         ^^^^

error: expected a struct with field `R` but found `()`
   ┌─ tests/checking/typing/implicit_deref_borrow_field_from_non_struct.move:12:9
   │
12 │         ().R;
   │         ^^

error: expected a struct with field `f` but found `(?18, ?19)`
   ┌─ tests/checking/typing/implicit_deref_borrow_field_from_non_struct.move:13:9
   │
13 │         (S{f: 0}, S{f:0}).f;
   │         ^^^^^^^^^^^^^^^^^
